--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "env"]
 	path = env
-	url = https://github.com/riscv/riscv-test-env.git
+	url = diegonehab-github:cartesi/riscv-test-env.git
