--- a/isa/Makefile
+++ b/isa/Makefile
@@ -8,22 +8,22 @@ src_dir := .
 
 ifeq ($(XLEN),64)
 include $(src_dir)/rv64ui/Makefrag
-include $(src_dir)/rv64uc/Makefrag
+#include $(src_dir)/rv64uc/Makefrag
 include $(src_dir)/rv64um/Makefrag
 include $(src_dir)/rv64ua/Makefrag
-include $(src_dir)/rv64uf/Makefrag
-include $(src_dir)/rv64ud/Makefrag
+#include $(src_dir)/rv64uf/Makefrag
+#include $(src_dir)/rv64ud/Makefrag
 include $(src_dir)/rv64si/Makefrag
 include $(src_dir)/rv64mi/Makefrag
 endif
-include $(src_dir)/rv32ui/Makefrag
-include $(src_dir)/rv32uc/Makefrag
-include $(src_dir)/rv32um/Makefrag
-include $(src_dir)/rv32ua/Makefrag
-include $(src_dir)/rv32uf/Makefrag
-include $(src_dir)/rv32ud/Makefrag
-include $(src_dir)/rv32si/Makefrag
-include $(src_dir)/rv32mi/Makefrag
+#include $(src_dir)/rv32ui/Makefrag
+#include $(src_dir)/rv32uc/Makefrag
+#include $(src_dir)/rv32um/Makefrag
+#include $(src_dir)/rv32ua/Makefrag
+#include $(src_dir)/rv32uf/Makefrag
+#include $(src_dir)/rv32ud/Makefrag
+#include $(src_dir)/rv32si/Makefrag
+#include $(src_dir)/rv32mi/Makefrag
 
 default: all
 
@@ -35,12 +35,16 @@ RISCV_PREFIX ?= riscv$(XLEN)-unknown-elf-
 RISCV_GCC ?= $(RISCV_PREFIX)gcc
 RISCV_GCC_OPTS ?= -static -mcmodel=medany -fvisibility=hidden -nostdlib -nostartfiles
 RISCV_OBJDUMP ?= $(RISCV_PREFIX)objdump --disassemble-all --disassemble-zeroes --section=.text --section=.text.startup --section=.text.init --section=.data
+RISCV_OBJCOPY ?= $(RISCV_PREFIX)objcopy -S -O binary
 RISCV_SIM ?= spike
 
 vpath %.S $(src_dir)
 
 #------------------------------------------------------------
 # Build assembly tests
+
+%.bin: %
+	$(RISCV_OBJCOPY) $< $@
 
 %.dump: %
 	$(RISCV_OBJDUMP) $< > $@
@@ -63,7 +67,9 @@ $(1)_tests += $$($(1)_v_tests)
 
 $(1)_tests_dump = $$(addsuffix .dump, $$($(1)_tests))
 
-$(1): $$($(1)_tests_dump)
+$(1)_tests_bin = $$(addsuffix .bin, $$($(1)_tests))
+
+$(1): $$($(1)_tests_dump) $$($(1)_tests_bin)
 
 .PHONY: $(1)
 
@@ -71,38 +77,39 @@ tests += $$($(1)_tests)
 
 endef
 
-$(eval $(call compile_template,rv32ui,-march=rv32g -mabi=ilp32))
-$(eval $(call compile_template,rv32uc,-march=rv32g -mabi=ilp32))
-$(eval $(call compile_template,rv32um,-march=rv32g -mabi=ilp32))
-$(eval $(call compile_template,rv32ua,-march=rv32g -mabi=ilp32))
-$(eval $(call compile_template,rv32uf,-march=rv32g -mabi=ilp32))
-$(eval $(call compile_template,rv32ud,-march=rv32g -mabi=ilp32))
-$(eval $(call compile_template,rv32si,-march=rv32g -mabi=ilp32))
-$(eval $(call compile_template,rv32mi,-march=rv32g -mabi=ilp32))
+#$(eval $(call compile_template,rv32ui,-march=rv32g -mabi=ilp32))
+#$(eval $(call compile_template,rv32uc,-march=rv32g -mabi=ilp32))
+#$(eval $(call compile_template,rv32um,-march=rv32g -mabi=ilp32))
+#$(eval $(call compile_template,rv32ua,-march=rv32g -mabi=ilp32))
+#$(eval $(call compile_template,rv32uf,-march=rv32g -mabi=ilp32))
+#$(eval $(call compile_template,rv32ud,-march=rv32g -mabi=ilp32))
+#$(eval $(call compile_template,rv32si,-march=rv32g -mabi=ilp32))
+#$(eval $(call compile_template,rv32mi,-march=rv32g -mabi=ilp32))
 ifeq ($(XLEN),64)
 $(eval $(call compile_template,rv64ui,-march=rv64g -mabi=lp64))
-$(eval $(call compile_template,rv64uc,-march=rv64g -mabi=lp64))
+#$(eval $(call compile_template,rv64uc,-march=rv64g -mabi=lp64))
 $(eval $(call compile_template,rv64um,-march=rv64g -mabi=lp64))
 $(eval $(call compile_template,rv64ua,-march=rv64g -mabi=lp64))
-$(eval $(call compile_template,rv64uf,-march=rv64g -mabi=lp64))
-$(eval $(call compile_template,rv64ud,-march=rv64g -mabi=lp64))
+#$(eval $(call compile_template,rv64uf,-march=rv64g -mabi=lp64))
+#$(eval $(call compile_template,rv64ud,-march=rv64g -mabi=lp64))
 $(eval $(call compile_template,rv64si,-march=rv64g -mabi=lp64))
 $(eval $(call compile_template,rv64mi,-march=rv64g -mabi=lp64))
 endif
 
 tests_dump = $(addsuffix .dump, $(tests))
+tests_bin = $(addsuffix .bin, $(tests))
 tests_hex = $(addsuffix .hex, $(tests))
 tests_out = $(addsuffix .out, $(spike_tests))
 tests32_out = $(addsuffix .out32, $(spike32_tests))
 
-run: $(tests_out) $(tests32_out)
+run: $(tests_out) $(tests32_out) $(tests_bin)
 
-junk += $(tests) $(tests_dump) $(tests_hex) $(tests_out) $(tests32_out)
+junk += $(tests) $(tests_dump) $(tests_hex) $(tests_out) $(tests32_out) $(tests_bin)
 
 #------------------------------------------------------------
 # Default
 
-all: $(tests_dump)
+all: $(tests_dump) $(tests_bin)
 
 #------------------------------------------------------------
 # Clean up
